{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 147,
  "lineage": "90392d9d-a5a7-3943-3a86-bc8476f77a63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:loadbalancer/app/Application/faa76bbfca31624c",
            "arn_suffix": "app/Application/faa76bbfca31624c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Application-877230390.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:236422759543:loadbalancer/app/Application/faa76bbfca31624c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Application",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08bcf9a49847499aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bbeb76bc1e5fdd48"
              },
              {
                "subnet_id": "subnet-0dbbe415e030ff43d"
              }
            ],
            "subnets": [
              "subnet-0bbeb76bc1e5fdd48",
              "subnet-0dbbe415e030ff43d"
            ],
            "vpc_id": "vpc-0174fe56302520851",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf55824449c15ab5",
            "association_id": "eipassoc-0d6210fcfe0384a22",
            "domain": "vpc",
            "id": "eipalloc-0cf55824449c15ab5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dd83fcc09ed8a7c5",
            "private_dns": "ip-10-0-1-89.ec2.internal",
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-54-82-140-243.compute-1.amazonaws.com",
            "public_ip": "54.82.140.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DBInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:236422759543:instance/i-02dd2c25de25245a9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02dd2c25de25245a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da057195142a2801",
            "private_dns": "ip-10-0-3-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04eabd676c35bfb2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f3c9790119dbca6",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8f57e8e69e62445"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyPair",
            "aws_security_group.allow_tls_db",
            "aws_subnet.privateSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:236422759543:instance/i-09c7041aee1257121",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c7041aee1257121",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e80ee558dc1d35be",
            "private_dns": "ip-10-0-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_ip": "54.80.90.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b80d42951acaf28e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbeb76bc1e5fdd48",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bcf9a49847499aa"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyPair",
            "aws_security_group.allow_tls",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:236422759543:instance/i-0faaf6dfce767b60b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faaf6dfce767b60b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ed2d2ba017f7fed",
            "private_dns": "ip-10-0-2-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.149",
            "public_ip": "44.201.47.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9e7a07920959fc3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbbe415e030ff43d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bcf9a49847499aa"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyPair",
            "aws_security_group.allow_tls",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:internet-gateway/igw-069fb064697ab0d21",
            "id": "igw-069fb064697ab0d21",
            "owner_id": "236422759543",
            "tags": {
              "name": "IG"
            },
            "tags_all": {
              "name": "IG"
            },
            "vpc_id": "vpc-0174fe56302520851"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:listener/app/Application/faa76bbfca31624c/8cfe1e715a32710e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:236422759543:listener/app/Application/faa76bbfca31624c/8cfe1e715a32710e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:loadbalancer/app/Application/faa76bbfca31624c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.allow_tls",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1",
            "arn_suffix": "targetgroup/tgroup/b646912d394fc8f1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0174fe56302520851"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1-20220930051406733700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1",
            "target_id": "i-09c7041aee1257121"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1-20220930051406683700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:236422759543:targetgroup/tgroup/b646912d394fc8f1",
            "target_id": "i-0faaf6dfce767b60b"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf55824449c15ab5",
            "connectivity_type": "public",
            "id": "nat-0ad1d4e619ff09542",
            "network_interface_id": "eni-0dd83fcc09ed8a7c5",
            "private_ip": "10.0.1.89",
            "public_ip": "54.82.140.243",
            "subnet_id": "subnet-0bbeb76bc1e5fdd48",
            "tags": {
              "name": "NAT GW"
            },
            "tags_all": {
              "name": "NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.ig",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:route-table/rtb-0e089679cbcce4d9e",
            "id": "rtb-0e089679cbcce4d9e",
            "owner_id": "236422759543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ad1d4e619ff09542",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Privateroute"
            },
            "tags_all": {
              "name": "Privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0174fe56302520851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:route-table/rtb-0d248d3a4e33cc0c0",
            "id": "rtb-0d248d3a4e33cc0c0",
            "owner_id": "236422759543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069fb064697ab0d21",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "route"
            },
            "tags_all": {
              "name": "route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0174fe56302520851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e896906d5fe6a940",
            "route_table_id": "rtb-0d248d3a4e33cc0c0",
            "subnet_id": "subnet-0bbeb76bc1e5fdd48"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb36b7f7ed408232",
            "route_table_id": "rtb-0d248d3a4e33cc0c0",
            "subnet_id": "subnet-0dbbe415e030ff43d"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baf28029ac38907a",
            "route_table_id": "rtb-0e089679cbcce4d9e",
            "subnet_id": "subnet-09f3c9790119dbca6"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.ng",
            "aws_route_table.privateRt",
            "aws_subnet.privateSubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:security-group/sg-08bcf9a49847499aa",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bcf9a49847499aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH_Internet",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH_Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH_Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH_Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "236422759543",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0174fe56302520851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:security-group/sg-0f8f57e8e69e62445",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8f57e8e69e62445",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_tls_db",
            "name_prefix": "",
            "owner_id": "236422759543",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "SG_DB"
            },
            "tags_all": {
              "name": "SG_DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0174fe56302520851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:subnet/subnet-09f3c9790119dbca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3c9790119dbca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236422759543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnet"
            },
            "tags_all": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-0174fe56302520851"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:subnet/subnet-0bbeb76bc1e5fdd48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbeb76bc1e5fdd48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236422759543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PunlicSubnet"
            },
            "tags_all": {
              "Name": "PunlicSubnet"
            },
            "vpc_id": "vpc-0174fe56302520851"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:subnet/subnet-0dbbe415e030ff43d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbbe415e030ff43d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236422759543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PunlicSubnet"
            },
            "tags_all": {
              "Name": "PunlicSubnet"
            },
            "vpc_id": "vpc-0174fe56302520851"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236422759543:vpc/vpc-0174fe56302520851",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d845f03189d9c023",
            "default_route_table_id": "rtb-0231e9bdaf76866dc",
            "default_security_group_id": "sg-0d287addd06a1ffe1",
            "dhcp_options_id": "dopt-0cba2fa7c4864820e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0174fe56302520851",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0231e9bdaf76866dc",
            "owner_id": "236422759543"
          }
        }
      ]
    }
  ]
}